# Youtube-Channel-Anaylsis-Project

./: .gitignore  .pre-commit-config.yaml  LICENSE  QUICK_START.md  README.md  main.py  pyproject.toml  requirements.txt  run_analysis.py
analysis/: 01_wordcloud_analysis.py  02_upload_timing_analysis.py  03_upload_frequency_analysis.py  04_correlation_analysis.py  05_video_duration_analysis.py  06_channel_age_analysis.py  07_expected_views_analysis.py  08_subscriber_ratio_analysis.py  data_preprocessing.py
config/: config.py
data/: sample_data.json
deployment/: Dockerfile  docker-compose.yml  requirements-prod.txt
docs/: API_SETUP.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  USAGE_EXAMPLES.md
examples/: sample_analysis_report.html
examples/performance_benchmarks/: benchmark_results.md
notebooks/: data_analysis.py
portfolio/: PROJECT_OVERVIEW.md  TECHNICAL_HIGHLIGHTS.md
portfolio/DEMO_SCREENSHOTS/: README.md
src/analysis/: channel_analyzer.py
src/data_collection/: enhanced_youtube_api.py  youtube_api.py
src/visualization/: charts.py
tests/: test_analyzer.py
visualizations/: README.md
visualizations/01_wordcloud/: README.md
visualizations/02_timing_analysis/: README.md
visualizations/03_upload_frequency/: README.md
visualizations/04_correlation/: README.md
visualizations/05_duration/: README.md
visualizations/06_channel_age/: README.md
visualizations/07_expected_views/: README.md
visualizations/08_subscriber_ratio/: README.md
